# bashdog

./: .bashdog.yaml  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dockerhub-description.yml
examples/: documentation.md  example.sh  example_2.sh
examples/html/: index.html  style.css
src/bashdog/: main.py  parsers.py
src/bashdog/templates/html/: base.html
src/bashdog/templates/md/: documentation.md
tests/: test_main.py  test_parsers.py
